# shush

./: .gitignore  LICENSE.md  Pipfile  mypy.ini  setup.cfg
examples/: helloworld.py
shush/: __init__.py  client.py
tests/: test_client.py
