[metadata]
name = shush
version = 0.1.0
author = Theodore Messinezis
author_email = theodore@messinezis.com

[options]
python_requires = >=3.3
packages = find:
install_requires =
    google-cloud-kms>=1.1.0<2
    google-cloud-storage>=1.16.1<2
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-mock

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
